--- a/src/pug/1-0otdel.pug
+++ b/src/pug/1-0otdel.pug
@@ -11,11 +11,12 @@ block content
 				.page-head-bg
 					.page-head-bg-inner
 						img(data-src="img/head/1.jpg", alt="").js-image
-				.page-head-inner
-					h1.title.h1 Отделения
-					.bread-cont
-						a(href="#").bread-item Главная
-						a(href="#").bread-item Отделения
+				.page-head-container
+					.page-head-inner
+						h1.title.h1 Отделения
+						.bread-cont
+							a(href="#").bread-item Главная
+							a(href="#").bread-item Отделения
 	.wrapper
 		.box
 			.content-element
@@ -23,17 +24,27 @@ block content
 					aside.aside-menu(data-sticky_parent)
 						.aside-menu-inner
 							// есди элемент стикается - кладем его в этот контейнер,
-							.aside-menu-stick.js-stick
+							.aside-menu-stick.js-stick.js-dropdown-parent
 								// модификатор .nav для ссылок на страницы и .scroll для ссылок скролящих
-								ul.aside-nav.nav
+								.aside-title.title.h3.js-dropdown.dropdown Отделения
+								ul.aside-nav.nav.js-dropdown-target
 									li.aside-nav-item
 										a.aside-nav-link(href="#") Клинико-диагностическая лаборатория
 									li.aside-nav-item
 										a.aside-nav-link(href="#") УЗ-диагностика
 									li.aside-nav-item
 										a.aside-nav-link(href="#") Рентгенодиагностика
-									li.aside-nav-item
-										a.aside-nav-link(href="#") Хирургия
+									li.aside-nav-item.js-aside-drop
+										span.aside-nav-link.dropdown Хирургия
+										ul
+											li.aside-nav-item
+												a(href="#").aside-nav-link Хирургия
+											li.aside-nav-item
+												a(href="#").aside-nav-link Травматология
+											li.aside-nav-item
+												a(href="#").aside-nav-link Онкология
+											li.aside-nav-item
+												a(href="#").aside-nav-link Эндоскопия
 									li.aside-nav-item
 										a.aside-nav-link(href="#") Стоматология
 									li.aside-nav-item
@@ -42,8 +53,17 @@ block content
 										a.aside-nav-link(href="#") Гинекология
 									li.aside-nav-item
 										a.aside-nav-link(href="#") Урология
-									li.aside-nav-item
-										a.aside-nav-link(href="#") Терапия
+									li.aside-nav-item.js-aside-drop
+										span.aside-nav-link.dropdown Терапия
+										ul 
+											li.aside-nav-item
+												a(href="#").aside-nav-link Хирургия
+											li.aside-nav-item
+												a(href="#").aside-nav-link Травматология
+											li.aside-nav-item
+												a(href="#").aside-nav-link Онкология
+											li.aside-nav-item
+												a(href="#").aside-nav-link Эндоскопия
 									li.aside-nav-item
 										a.aside-nav-link(href="#") Офтальмология
 									li.aside-nav-item
@@ -53,20 +73,162 @@ block content
 									li.aside-nav-item
 										a.aside-nav-link(href="#") ФизИотерапия
 					.aside-content
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
-						.text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores numquam adipisci officia temporibus sint, quae eligendi sequi sapiente, rem cumque at autem, ullam dicta magnam! Corrupti expedita, molestiae cum numquam!
+						.section-wrapper
+							mixin section()
+								.section.bg-secondary.bg-secondary-hover
+									.section-inner
+										.tabs-wrapper
+											if block
+												block
+												.tabs-bottom 	
+													.content-block
+														.text-sm Зав. отделением
+														.vrach-vrach-name Зоя Григорьевна Бочкарева
+													a(href="#").btn
+														span(data-text='Все услуги') Смотреть все 212 услуг
+							+section
+								.tabs.js-tabs-wrap
+									.tabs-left
+										.tabs-head
+											.tabs-item.js-tab-trigger.active
+												span.title.h3 Клинико-диагностическая лаборатория
+										.text 118 услуг
 
+									.tabs-right
+										.tabs-body
+											.tabs-cont
+												.footer-links-add
+													ul
+														li 
+															a(href="#").text Магнитно-резонансная томография головного мозга, ангиография интракраниальных сосудов и всего позвоночника
+														li 
+															a(href="#").text Магнитно-резонансная томография одного плечевого сустава
+														li 
+															a(href="#").text Магнитно-резонансная томография одного тазобедренного сустава
+														li 
+															a(href="#").text УЗИ мочевого пузыря (через брюшную стенку)
+														li 
+															a(href="#").text УЗИ мочевого пузыря с остаточной мочой
+														li 
+															a(href="#").text УЗИ - контроль и наведение при полифокальной пункционной биопсии предстательной железы
+							+section
+								.tabs.js-tabs-wrap
+									.tabs-left
+										.tabs-head
+											.tabs-item.js-tab-trigger.active
+												span.title.h3 УЗ-диагностика
+										.text 212 услуг
+
+									.tabs-right
+										.tabs-body
+											.tabs-cont
+												.footer-links-add
+													ul
+														li 
+															a(href="#").text УЗИ мочевого пузыря с остаточной мочой
+														li 
+															a(href="#").text Эпиляция воском обработка области губ (в т.ч. н.д.с. 18%)
+														li 
+															a(href="#").text УЗИ предстательной железы (через брюшную стенку)
+														li 
+															a(href="#").text Эпиляция воском обработка бровей (в т.ч. н.д.с. 18%)
+														li 
+															a(href="#").text УЗИ предстательной железы (ректальным датчиком) - ТРУЗИ
+														li 
+															a(href="#").text Эпиляция воском обработка щек (в т.ч. н.д.с. 18%)
+							+section
+								.tabs.js-tabs-wrap
+									.tabs-left
+										.tabs-head
+											.tabs-item.js-tab-trigger.active
+												span.title.h3 Рентгенодиагностика
+										.text 212 услуг
+
+									.tabs-right
+										.tabs-body
+											.tabs-cont
+												.footer-links-add
+													ul
+														li 
+															a(href="#").text Магнитно-резонансная томография головного мозга, ангиография интракраниальных сосудов и всего позвоночника
+														li 
+															a(href="#").text УЗИ мочевого пузыря (через брюшную стенку)
+														li 
+															a(href="#").text Магнитно-резонансная томография одного плечевого сустава
+														li 
+															a(href="#").text УЗИ мочевого пузыря с остаточной мочой
+														li 
+															a(href="#").text Магнитно-резонансная томография одного тазобедренного сустава
+														li 
+															a(href="#").text УЗИ - контроль и наведение при полифокальной пункционной биопсии предстательной железы
+							+section
+								.tabs.js-tabs-wrap
+									.tabs-left
+										.tabs-head
+											.tabs-item.js-tab-trigger.active
+												span.title.h3 Хирургия
+											.tabs-item.js-tab-trigger
+												span.title.h3 Травматология
+											.tabs-item.js-tab-trigger
+												span.title.h3 Онкология
+											.tabs-item.js-tab-trigger
+												span.title.h3 Эндоскопия
+										.text 212 услуг
+
+									.tabs-right
+										.tabs-body
+											.tabs-cont
+												.footer-links-add
+													ul
+														li 
+															a(href="#").text Магнитно-резонансная томография головного мозга, ангиография интракраниальных сосудов и всего позвоночника
+														li 
+															a(href="#").text УЗИ мочевого пузыря (через брюшную стенку)
+														li 
+															a(href="#").text Магнитно-резонансная томография одного плечевого сустава
+														li 
+															a(href="#").text УЗИ мочевого пузыря с остаточной мочой
+														li 
+															a(href="#").text Магнитно-резонансная томография одного тазобедренного сустава
+														li 
+															a(href="#").text УЗИ - контроль и наведение при полифокальной пункционной биопсии предстательной железы
+											.tabs-cont
+												.footer-links-add
+													ul
+														li 
+															a(href="#").text УЗИ мочевого пузыря (через брюшную стенку)
+														li 
+															a(href="#").text Магнитно-резонансная томография одного плечевого сустава
+														li 
+															a(href="#").text УЗИ мочевого пузыря с остаточной мочой
+														li 
+															a(href="#").text Магнитно-резонансная томография одного тазобедренного сустава
+														li 
+															a(href="#").text УЗИ - контроль и наведение при полифокальной пункционной биопсии предстательной железы
+											.tabs-cont
+												.footer-links-add
+													ul
+														li 
+															a(href="#").text Магнитно
+														li 
+															a(href="#").text УЗИ 
+														li 
+															a(href="#").text Магнитно-резонансная плечевого сустава
+														li 
+															a(href="#").text УЗИ 
+														li 
+															a(href="#").text Магнитно-
+														li 
+															a(href="#").text УЗИ - контроль и наведение при полифокальной пункционной биопсии предстательной железы
+											.tabs-cont
+												.footer-links-add
+													ul
+														li 
+															a(href="#").text  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat voluptatum inventore quas nostrum, rerum exercitationem dolorem sit recusandae explicabo, saepe.
+														li 
+															a(href="#").text УЗИ мочевого пузыря (через брюшную стенку)
+														li 
+															a(href="#").text Магнитно-резонансная томография одного плечевого сустава
 	include includes/_slider.pug
 
 		//- .box
